Test-cash-register-app

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
             and know minimum number notes to be return.
         </p>
         <label for="Bill-amount">Bill Amount:</label>
-        <input  id ="Bill-amount" type="text">
-        <button>Next</button>
-        <label for="cash-given">Cash Given</label>
-        <input id="cash-given" type="text">
+        <input class="input" id ="Bill-amount" type="text">
+        <!-- <button id = "check-button">Next</button> -->
+        <label for="cash-given">Cash Given:</label>
+        <input class="input" id="cash-given" type="text">
         <button id = "check-button">Check</button>
         <p id="error-message"></p>
         <table class="change-table">
@@ -46,11 +46,18 @@
                 <td>5</td>
                 <td>1</td>
             </tr>
-        </table>
-
-
-        
+        </table> 
     </div>
+    <footer>
+        <p>© | 2022 | Shabrez</p>
+        <ul class="footer-list">
+            <li> <a class="links" href="https://github.com/mohshabrez"><img src="github.png" alt="Github"></a></li>
+            <li><a class="links" href="https://www.linkedin.com/in/g-shabrez-785362159/"><img src="linkedin.png" alt="Linkedin"></a></li>
+            <!-- <li><a class="links" href=""><img src="" alt=""></a></li> -->
+            <!-- <li><a class="links" href=""><img src="" alt=""></a></li> -->
+
+        </ul>
+    </footer>
 </body>
 <script src="app.js"></script>
 </html>
